# thumbnail-processor

./: .gitignore  .gitkeep  README.md
.github/workflows/: bootstrap.yml  build-push-a.yml  deploy-all.yml  deploy-k8s.yml  terraform-apply.yml  terraform-destroy.yml  terraform-global.yml  terraform-monitoring.yml
api/: Dockerfile  main.py  pyproject.toml
bootstrap-terraform/: main.tf
frontend/: .dockerignore  Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/.next/: react-loadable-manifest.json  trace
frontend/.next/cache/: .rscinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/lib/: mock-data.ts  types.ts  useRealtimeData.ts
k8s/: clusterrole.yaml  frontend-sa.yaml  ingress.yaml  ns.yaml  sa-api.yaml  sa-worker.yaml
k8s/api/: configmap.yaml  deployment.yaml  hpa.yaml
k8s/frontend/: deployment.yaml  hpa.yaml
k8s/worker/: configmap.yaml  deployment.yaml  scaledobject.yaml  trigger-auth.yaml
route53/: main.tf  outputs.tf  variables.tf
scripts/: bench-worker.sh  bootstrap.sh  deploy-aws-lb.sh  deploy-k8s.sh  deploy-keda.sh
terraform/: main.tf  outputs.tf  variables.tf
terraform-monitoring/: main.tf  variables.tf
terraform/bootstrap/: main.tf  outputs.tf  variables.tf
terraform/ecr/: main.tf
terraform/eks/: eks.tf  outputs.tf  variables.tf
terraform/iam/: iam.tf  outputs.tf  variables.tf
terraform/networking/: main.tf  outputs.tf
terraform/s3/: outputs.tf  s3.tf  variables.tf
terraform/sqs/: outputs.tf  sqs.tf
worker/: Dockerfile  __init__.py  main.py  pyproject.toml
(+146 files in other folders)
